Html image tag error fix and overriding the inline css on portlet (and making the spacing smaller)

--- a/public/stylesheets/chris_editor.css
+++ b/public/stylesheets/chris_editor.css
@@ -37,7 +37,7 @@ body {
 
 
 .column { width: 300px; float: left; padding-bottom: 10px; }
-.portlet { margin: 5px 2px 0 2px; }
+.portlet { margin: 1px 2px 0 2px !important; }
 .portlet div {
     display: inline;
     padding-left: 2px;
